Added the logic for entity

--- a/Roles-Trainning-application/appsettings.json
+++ b/Roles-Trainning-application/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaulConnection": "Server=(localdb)\\Local;Database=RoleTrainning;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\Local;Database=RoleTrainning;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
